feat: changed configuration

--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
-email_address                             : emil.baehr@gmail.com
+your_name                                 : Oleg Rybalko                                
+your_link                                 :                      
+your_city                                 : Saint-Petersburg                                
+email_address                             : rybalkooleg@niuitmo.ru
 facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
+instagram_username                        : rybalko._.oleg
+twitter_username                          : OlegRybalko_
+github_username                           : SkullMag
 youtube_username                          :
 
 
