--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,11 @@ features                                  :
     fontawesome_icon_name                 : magnifying-glass
     
   - title                                 : Learn smarter 
-    description                           : Use our implementation of Leitner system to retain gained knowledge forever
+    description                           : Use our implementation of Leitner system to significantly boost your learning and retention <b>by up to 50%</b>
+    fontawesome_icon_name                 : mobile
+
+  - title                                 : Perform best at exams
+    description                           : Research shows students, who learn with spaced repetition algorithm, to outperform other students by 16% at exams
     fontawesome_icon_name                 : mobile
 
   - title                                 : Keep knowledge sorted
