--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ features                                  :
     description                           : Use our implementation of Leitner system to significantly boost your learning and retention <b>by up to 50%</b>
     fontawesome_icon_name                 : mobile
 
-  - title                                 : Perform best at exams
-    description                           : Research shows students, who learn with spaced repetition algorithm, to outperform other students by 16% at exams
+  - title                                 : Perform better at exams
+    description                           : Research shows students, who learn with spaced repetition algorithm, to outperform other students <b>by up to 16%</b> at exams
     fontawesome_icon_name                 : mobile
 
   - title                                 : Keep knowledge sorted
