--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ features                                  :
     
   - title                                 : Learn smarter 
     description                           : Use our implementation of Leitner system to significantly boost your learning and retention <b>by up to 50%</b>
-    fontawesome_icon_name                 : lightbulb-on 
+    fontawesome_icon_name                 : user-graduate
 
   - title                                 : Perform better at exams
     description                           : Research shows students, who learn with spaced repetition algorithm, to outperform other students <b>by up to 16%</b> at exams
